--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -18,8 +18,8 @@
 
         <ImageView
             android:id="@+id/swarmImageMyReportedSwarms"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="196dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
@@ -96,12 +96,16 @@
             android:text="Accessibility: __"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/sizeTextViewMyReportedSwarms"
             android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="@+id/sizeTextViewMyReportedSwarms"
             android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/sizeTextViewMyReportedSwarms" />
+            app:layout_constraintLeft_toLeftOf="@+id/sizeTextViewMyReportedSwarms"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/cancelSwarmClaimButtonMyReportedSwarms"
@@ -117,7 +121,9 @@
             app:layout_constraintRight_toLeftOf="@+id/guideline2"
             android:layout_marginRight="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.25" />
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
@@ -131,10 +137,11 @@
             android:layout_width="0dp"
             android:background="@drawable/bivouac_button"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="-1dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
+            android:padding="8dp"
             android:text="Delete Report"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/guideline2"
