--- a/app/src/main/res/layout/my_claim_item.xml
+++ b/app/src/main/res/layout/my_claim_item.xml
@@ -63,6 +63,7 @@
             android:id="@+id/contactReporterTextViewMyClaims"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:text="Contact Swarm Reporter"
             android:drawableLeft="@drawable/ic_phone_black_24dp"
             android:textColor="@color/primary_text"
@@ -98,6 +99,7 @@
             android:text="Accessibility: __"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/sizeTextViewMyClaims"
+            app:layout_constraintBottom_toTopOf="@+id/deleteReportButton"
             android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="@+id/sizeTextViewMyClaims"
             android:layout_marginLeft="0dp"
