--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -28,7 +28,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bee" />
+            app:srcCompat="@drawable/bee"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/timeStampTextViewMyReportedSwarms"
@@ -42,7 +44,9 @@
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/claimantTextViewMyReportedSwarms"
@@ -53,41 +57,38 @@
             android:textSize="20sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/timeStampTextViewMyReportedSwarms"
-            android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="@+id/timeStampTextViewMyReportedSwarms"
-            android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/timeStampTextViewMyReportedSwarms" />
 
         <TextView
             android:id="@+id/contactTextViewMyReportedSwarms"
             android:layout_width="0dp"
-            android:visibility="gone"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:drawableLeft="@drawable/ic_phone_black_24dp"
             android:text=""
             android:textColor="@color/primary_text"
             android:textSize="20sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/claimantTextViewMyReportedSwarms"
-            android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="@+id/claimantTextViewMyReportedSwarms"
-            android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/claimantTextViewMyReportedSwarms" />
 
         <TextView
             android:id="@+id/sizeTextViewMyReportedSwarms"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
             android:layout_marginTop="8dp"
             android:text="Size: The size of a __"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="@+id/contactTextViewMyReportedSwarms"
             app:layout_constraintRight_toRightOf="@+id/contactTextViewMyReportedSwarms"
-            app:layout_constraintTop_toBottomOf="@+id/contactTextViewMyReportedSwarms" />
+            app:layout_constraintTop_toBottomOf="@+id/contactTextViewMyReportedSwarms"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <TextView
             android:id="@+id/accessibilityTextViewMyReportedSwarms"
@@ -98,9 +99,7 @@
             android:textSize="20sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/sizeTextViewMyReportedSwarms"
-            android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="@+id/sizeTextViewMyReportedSwarms"
-            android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/sizeTextViewMyReportedSwarms"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -112,7 +111,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginLeft="0dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/bivouac_button"
             android:text="Cancel Claim"
@@ -130,7 +128,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/guideline2"
             app:layout_constraintGuide_begin="192dp"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            tools:layout_editor_absoluteY="81dp"
+            tools:layout_editor_absoluteX="192dp" />
 
         <Button
             android:id="@+id/deleteReportButton"
@@ -146,7 +146,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/guideline2"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyReportedSwarms" />
+            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyReportedSwarms"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 
