--- a/app/src/main/res/layout/my_claim_item.xml
+++ b/app/src/main/res/layout/my_claim_item.xml
@@ -63,17 +63,15 @@
             android:id="@+id/contactReporterTextViewMyClaims"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="Contact Swarm Reporter"
-            android:drawableLeft="@drawable/ic_phone_black_24dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="8dp"
+            android:text="Reporter doesn't wish to be contacted"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/reportedByTextViewMyClaims"
-            android:layout_marginRight="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/reportedByTextViewMyClaims"
             app:layout_constraintRight_toRightOf="@+id/reportedByTextViewMyClaims"
-            android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/reportedByTextViewMyClaims" />
+            app:layout_constraintTop_toBottomOf="@+id/reportedByTextViewMyClaims" />
 
 
         <TextView
@@ -115,14 +113,13 @@
             android:padding="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyClaims"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="@+id/accessibilityTextViewMyClaims"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextViewMyClaims"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 
