--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -65,7 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:text=""
+            android:text="Contact information not available"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
             android:layout_marginTop="8dp"
@@ -77,18 +77,17 @@
             android:id="@+id/sizeTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="8dp"
             android:text="Size: The size of a __"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            app:layout_constraintLeft_toLeftOf="@+id/contactTextViewMyReportedSwarms"
             app:layout_constraintRight_toRightOf="@+id/contactTextViewMyReportedSwarms"
             app:layout_constraintTop_toBottomOf="@+id/contactTextViewMyReportedSwarms"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0" />
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <TextView
             android:id="@+id/accessibilityTextViewMyReportedSwarms"
@@ -98,13 +97,14 @@
             android:textColor="@color/primary_text"
             android:textSize="20sp"
             android:layout_marginTop="8dp"
+            android:paddingBottom="40dp"
             app:layout_constraintTop_toBottomOf="@+id/sizeTextViewMyReportedSwarms"
             app:layout_constraintRight_toRightOf="@+id/sizeTextViewMyReportedSwarms"
-            app:layout_constraintLeft_toLeftOf="@+id/sizeTextViewMyReportedSwarms"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <Button
             android:id="@+id/cancelSwarmClaimButtonMyReportedSwarms"
