--- a/app/src/main/res/layout/activity_create_account_phone.xml
+++ b/app/src/main/res/layout/activity_create_account_phone.xml
@@ -17,39 +17,7 @@
         android:background="@color/primary_light"
         tools:context="com.example.guest.iamhere.activities.CreateAccountActivity"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp"
-        >
-
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:textColor="?android:textColorHint"
-            android:textSize="19sp"
-            android:text="Allow people to call me"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:paddingTop="8dp"
-            android:layout_marginRight="8dp"
-            android:paddingRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/phoneNumberTextView"/>
-
-        <EditText
-            android:id="@+id/phoneNumberTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:visibility="gone"
-            android:hint="(optional) Enter your phone number"
-            android:inputType="phone"
-            tools:layout_editor_absoluteY="136dp"
-            tools:layout_editor_absoluteX="192dp"
-            app:layout_constraintTop_toBottomOf="@+id/switch1"
-            app:layout_constraintBottom_toTopOf="@+id/nameInputTextView"/>
+        tools:layout_editor_absoluteX="0dp">
 
         <EditText
             android:id="@+id/nameInputTextView"
@@ -59,12 +27,11 @@
             android:hint="Enter your name"
             android:inputType="textPersonName"
             android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
-            app:layout_constraintBottom_toTopOf="@+id/emailInputTextView"/>
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <EditText
             android:id="@+id/emailInputTextView"
@@ -73,13 +40,41 @@
             android:ems="10"
             android:hint="Enter your email address"
             android:inputType="textPersonName"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="7dp"
+            app:layout_constraintTop_toBottomOf="@+id/nameInputTextView"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameInputTextView"
-            app:layout_constraintBottom_toTopOf="@+id/passwordInputTextView"/>
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:textSize="19sp"
+            android:textColor="?android:textColorHint"
+            android:text="Allow people to call me"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <EditText
+            android:id="@+id/phoneNumberTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="Enter your phone number"
+            android:inputType="phone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/switch1" />
 
         <EditText
             android:id="@+id/passwordInputTextView"
@@ -88,13 +83,12 @@
             android:ems="10"
             android:hint="Enter your password"
             android:inputType="textPassword"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/emailInputTextView"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="0dp"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emailInputTextView"
-            app:layout_constraintBottom_toTopOf="@+id/passwordConfirmInputTextView"/>
+            app:layout_constraintRight_toRightOf="parent" />
 
         <EditText
             android:id="@+id/passwordConfirmInputTextView"
@@ -103,13 +97,16 @@
             android:ems="10"
             android:hint="Confirm password"
             android:inputType="textPassword"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/passwordInputTextView"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordInputTextView"
-            app:layout_constraintBottom_toTopOf="@+id/createInputButton" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/createInputButton"
@@ -117,13 +114,12 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bivouac_button"
             android:text="Register"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputTextView"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            tools:layout_editor_absoluteY="384dp"
-            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputTextView"/>
+            app:layout_constraintLeft_toLeftOf="parent" />
 
 
 
