--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -20,37 +20,6 @@
         tools:layout_editor_absoluteX="0dp"
         >
 
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:textColor="?android:textColorHint"
-            android:textSize="19sp"
-            android:text="Allow people to call me"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:paddingTop="8dp"
-            android:layout_marginRight="8dp"
-            android:paddingRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/phoneNumberTextView"/>
-
-        <EditText
-            android:id="@+id/phoneNumberTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:visibility="gone"
-            android:hint="(optional) Enter your phone number"
-            android:inputType="phone"
-            tools:layout_editor_absoluteY="136dp"
-            tools:layout_editor_absoluteX="192dp"
-            app:layout_constraintTop_toBottomOf="@+id/switch1"
-            app:layout_constraintBottom_toTopOf="@+id/nameInputTextView"/>
-
         <EditText
             android:id="@+id/nameInputTextView"
             android:layout_width="0dp"
@@ -58,13 +27,12 @@
             android:ems="10"
             android:hint="Enter your name"
             android:inputType="textPersonName"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
-            app:layout_constraintBottom_toTopOf="@+id/emailInputTextView"/>
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <EditText
             android:id="@+id/emailInputTextView"
@@ -74,12 +42,44 @@
             android:hint="Enter your email address"
             android:inputType="textPersonName"
             android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/nameInputTextView"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:textColor="?android:textColorHint"
+            android:textSize="19sp"
+            android:text="Allow people to call me"
+            android:paddingTop="8dp"
+            android:paddingRight="8dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameInputTextView"
-            app:layout_constraintBottom_toTopOf="@+id/passwordInputTextView"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputTextView" />
+
+        <EditText
+            android:id="@+id/phoneNumberTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="(optional) Enter your phone number"
+            android:inputType="phone"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/switch1"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
 
         <EditText
             android:id="@+id/passwordInputTextView"
@@ -88,13 +88,12 @@
             android:ems="10"
             android:hint="Enter your password"
             android:inputType="textPassword"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/emailInputTextView"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emailInputTextView"
-            app:layout_constraintBottom_toTopOf="@+id/passwordConfirmInputTextView"/>
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <EditText
             android:id="@+id/passwordConfirmInputTextView"
@@ -103,13 +102,12 @@
             android:ems="10"
             android:hint="Confirm password"
             android:inputType="textPassword"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/passwordInputTextView"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordInputTextView"
-            app:layout_constraintBottom_toTopOf="@+id/createInputButton" />
+            app:layout_constraintRight_toRightOf="parent" />
 
         <Button
             android:id="@+id/createInputButton"
@@ -117,13 +115,14 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bivouac_button"
             android:text="Register"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            tools:layout_editor_absoluteY="384dp"
-            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInputTextView"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
 
 
