--- a/app/src/main/res/layout/activity_login_gate.xml
+++ b/app/src/main/res/layout/activity_login_gate.xml
@@ -14,8 +14,7 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/beebg"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        />
 
     <Button
         android:id="@+id/gateLoginButton"
@@ -25,13 +24,13 @@
         android:padding="8dp"
         android:text="Log In"
         android:textColor="@color/primary_text"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        android:layout_marginTop="0dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        android:layout_marginTop="8dp" />
 
     <Button
         android:id="@+id/gateRegisterButton"
@@ -44,7 +43,8 @@
         app:layout_constraintTop_toBottomOf="@+id/gateLoginButton"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp" />
 
     <Button
         android:id="@+id/aboutButton"
@@ -57,14 +57,15 @@
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginStart="8dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline4"
-        app:layout_constraintGuide_begin="370dp"
+        app:layout_constraintGuide_percent="0.6"
         android:orientation="horizontal" />
+
 </android.support.constraint.ConstraintLayout>
