--- a/app/src/main/res/layout/activity_login_gate.xml
+++ b/app/src/main/res/layout/activity_login_gate.xml
@@ -1,71 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fisherdynamic.swarmreporter1.activities.LoginGateActivity"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    android:background="@color/primary_light">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/beebg"
-        />
+        tools:context="fisherdynamic.swarmreporter1.activities.LoginGateActivity"
+        tools:layout_editor_absoluteY="81dp"
+        tools:layout_editor_absoluteX="0dp">
 
-    <Button
-        android:id="@+id/gateLoginButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bivouac_button"
-        android:padding="8dp"
-        android:text="Log In"
-        android:textColor="@color/primary_text"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        android:layout_marginTop="8dp" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/beebg"
+            />
 
-    <Button
-        android:id="@+id/gateRegisterButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bivouac_button"
-        android:text="Register New Account"
-        android:textColor="@color/primary_text"
-        android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/gateLoginButton"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
+        <Button
+            android:id="@+id/gateLoginButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bivouac_button"
+            android:padding="8dp"
+            android:text="Log In"
+            android:textColor="@color/primary_text"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="@+id/guideline4"
+            android:layout_marginTop="8dp" />
 
-    <Button
-        android:id="@+id/aboutButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bivouac_button"
-        android:text="About SwarmReporter"
-        android:textColor="@color/primary_text"
-        app:layout_constraintTop_toBottomOf="@+id/gateRegisterButton"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginStart="8dp" />
+        <Button
+            android:id="@+id/gateRegisterButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bivouac_button"
+            android:text="Register New Account"
+            android:textColor="@color/primary_text"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/gateLoginButton"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="8dp" />
 
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline4"
-        app:layout_constraintGuide_percent="0.6"
-        android:orientation="horizontal" />
+        <Button
+            android:id="@+id/aboutButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bivouac_button"
+            android:text="About SwarmReporter"
+            android:textColor="@color/primary_text"
+            app:layout_constraintTop_toBottomOf="@+id/gateRegisterButton"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginStart="8dp" />
 
-</android.support.constraint.ConstraintLayout>
+        <android.support.constraint.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline4"
+            app:layout_constraintGuide_percent="0.6"
+            android:orientation="horizontal" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
